Initial setup: added HTML structure, styles, and sections for portfolio

--- a/index.html
+++ b/index.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio</title>
+    <title>Rafael Cornejo - Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Tu Nombre</h1>
-        <p>Mi portafolio personal</p>
+        <h1>Rafael Alejandro Cornejo Rodríguez</h1>
+        <p>B.S. in Mechatronics Engineering</p>
     </header>
-    
-    <section>
-        <h2>Sobre mí</h2>
-        <p>Escribe aquí una breve descripción sobre ti.</p>
+
+    <section id="about">
+        <h2><i class="fa-solid fa-hand-sparkles"></i> Hello there!</h2>
+        <p>
+            I'm a mechatronics engineering student passionate about the intersection of 
+            <b>mechanics and electronics</b>. With hands-on experience in <b>robotics, digital design, 
+            and smart manufacturing</b>, I enjoy turning ideas into reality.
+        </p>
     </section>
-    
-    <section>
-        <h2>Proyectos</h2>
+
+    <section id="skills">
+        <h2><i class="fa-solid fa-kitchen-set"></i> Skills</h2>
         <ul>
-            <li>Proyecto 1</li>
-            <li>Proyecto 2</li>
-            <li>Proyecto 3</li>
+            <li><b>Programming:</b> Python, C++, R, LaTeX, MATLAB</li>
+            <li><b>Tools:</b> SolidWorks, Blender, Arduino, KiCad, GIMP</li>
+            <li><b>Areas of Interest:</b> Robotics, Automation, AI</li>
+        </ul>
+    </section>
+
+    <section id="experience">
+        <h2><i class="fa-solid fa-vial"></i> Experience</h2>
+        <div class="job">
+            <h3>Research Intern <span>@ Harvard Medical School</span></h3>
+            <p>Developing INSIGHT, a computer vision system integrated with a 6-DOF robotic arm.</p>
+        </div>
+        <div class="job">
+            <h3>Maintenance Intern <span>@ Palmex Alimentos</span></h3>
+            <p>Assisted in preventive and corrective maintenance of industrial machinery.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2><i class="fa-solid fa-comments"></i> Get in Touch</h2>
+        <ul>
+            <li><i class="fas fa-envelope"></i> <a href="mailto:rafael.cornejo.rdz@gmail.com">rafael.cornejo.rdz@gmail.com</a></li>
+            <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/rafael-cornejo-rdz">LinkedIn</a></li>
+            <li><i class="fab fa-github"></i> <a href="https://github.com/AleCornejoR">GitHub</a></li>
         </ul>
     </section>
 
     <footer>
-        <p>© 2024 Tu Nombre</p>
+        <p>© 2024 Rafael Cornejo</p>
     </footer>
 </body>
 </html>
