--- a/index.html
+++ b/index.html
@@ -6,54 +6,54 @@
     <title>Rafael Cornejo - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Rafael Alejandro Cornejo Rodríguez</h1>
-        <p>B.S. in Mechatronics Engineering</p>
+
+    <!-- NAVBAR -->
+    <nav>
+        <h2>Rafael Cornejo</h2>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- HERO SECTION -->
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Hello, I'm Rafael</h1>
+            <p>Mechatronics Engineer | Robotics | AI</p>
+        </div>
     </header>
 
-    <section id="about">
-        <h2><i class="fa-solid fa-hand-sparkles"></i> Hello there!</h2>
+    <!-- ABOUT SECTION -->
+    <section id="about" class="section">
+        <h2><i class="fa-solid fa-hand-sparkles"></i> About Me</h2>
         <p>
-            I'm a mechatronics engineering student passionate about the intersection of 
-            <b>mechanics and electronics</b>. With hands-on experience in <b>robotics, digital design, 
-            and smart manufacturing</b>, I enjoy turning ideas into reality.
+            Passionate about robotics, automation, and AI. I enjoy turning ideas into reality by combining 
+            mechanical and electronic design. Let's build the future together!
         </p>
     </section>
 
-    <section id="skills">
+    <!-- SKILLS SECTION -->
+    <section id="skills" class="section">
         <h2><i class="fa-solid fa-kitchen-set"></i> Skills</h2>
-        <ul>
-            <li><b>Programming:</b> Python, C++, R, LaTeX, MATLAB</li>
-            <li><b>Tools:</b> SolidWorks, Blender, Arduino, KiCad, GIMP</li>
-            <li><b>Areas of Interest:</b> Robotics, Automation, AI</li>
-        </ul>
+        <div class="skills-container">
+            <div class="skill-card">Python, C++, MATLAB</div>
+            <div class="skill-card">SolidWorks, Blender, KiCad</div>
+            <div class="skill-card">Automation & AI</div>
+        </div>
     </section>
 
-    <section id="experience">
+    <!-- EXPERIENCE SECTION -->
+    <section id="experience" class="section">
         <h2><i class="fa-solid fa-vial"></i> Experience</h2>
         <div class="job">
             <h3>Research Intern <span>@ Harvard Medical School</span></h3>
-            <p>Developing INSIGHT, a computer vision system integrated with a 6-DOF robotic arm.</p>
+            <p>Developing INSIGHT, a computer vision system for robotic applications.</p>
         </div>
         <div class="job">
-            <h3>Maintenance Intern <span>@ Palmex Alimentos</span></h3>
-            <p>Assisted in preventive and corrective maintenance of industrial machinery.</p>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h2><i class="fa-solid fa-comments"></i> Get in Touch</h2>
-        <ul>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:rafael.cornejo.rdz@gmail.com">rafael.cornejo.rdz@gmail.com</a></li>
-            <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/rafael-cornejo-rdz">LinkedIn</a></li>
-            <li><i class="fab fa-github"></i> <a href="https://github.com/AleCornejoR">GitHub</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>© 2024 Rafael Cornejo</p>
-    </footer>
-</body>
-</html>
+            <h3
